# Elrond

./: Elrond.cabal  LICENSE.md  README.md  stack.yaml
Elrond/: Elrond.cabal
app/: Main.hs
src/Elrond/: Client.hs  Core.hs  Server.hs
src/Elrond/Core/: Types.hs
