name:                Elrond
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/SwiftsNamesake/Elrond#readme.md
license:             MIT
license-file:        LICENSE.md
author:              Jonatan H Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           (c) Jonatan H Sundqvist, &lt;2015&gt;
category:            &lt;category&gt;
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Elrond.Core, Elrond.Client, Elrond.Server
  build-depends:       base >= 4.7 && < 5,
                       http-server,
                       lens,
                       url,
                       http-client,
                       http-types,
                       text,
                       bytestring,
                       containers,
                       aeson,
                       time,
                       convertible,
                       directory
  -- HDBC, HDBC-sqlite3,
  default-language:    Haskell2010

  extra-include-dirs: C:/Users/Jonatan/Downloads/Programmering/sqlite-amalgamation-3081101/sqlite-amalgamation-3081101
  extra-lib-dirs:     C:/Users/Jonatan/Desktop/Haskell/projects/Jeopardy

executable Elrond-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       Elrond
  default-language:    Haskell2010

test-suite Elrond-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       Elrond
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SwiftsNamesake/Elrond
